src/objects/FF_Staging_Forex__c.object
<CustomObject>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <description>Defines the numeric value of the dated exchange rate between the referenced Currency and the Corporate Currency for the org.</description>
        <inlineHelpText>Defines the numeric value of the dated exchange rate between the referenced Currency and the Corporate Currency for the org.</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Defines what Currency ISO Code this conversion rate belongs to.</description>
        <inlineHelpText>Defines what Currency ISO Code this conversion rate belongs to.</inlineHelpText>
        <label>Currency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>KWD</fullName>
                </value>
                <value>
                    <fullName>KZT</fullName>
                </value>
                <value>
                    <fullName>LTL</fullName>
                </value>
                <value>
                    <fullName>LVL</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Defines the start date for which the currency exchange rate applies. The exchange rate is valid from this date until the expiration date.</description>
        <inlineHelpText>Defines the start date for which the currency exchange rate applies. The exchange rate is valid from this date until the expiration date.</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when an error occurs inserting the staging currency record.  Once the issue is resolved, uncheck this box to all it process</description>
        <inlineHelpText>Checked when an error occurs inserting the staging currency record.  Once the issue is resolved, uncheck this box to all it process</inlineHelpText>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when staging record is successfully processed</description>
        <inlineHelpText>Checked when staging record is successfully processed</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>FF Staging - Forex</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Conversion_Rate__c</columns>
        <columns>Currency__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Currency__c</field>
            <operation>equals</operation>
            <value>CLP</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Error_List</fullName>
        <columns>NAME</columns>
        <columns>Currency__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Effective_Date__c</columns>
        <columns>Conversion_Rate__c</columns>
        <columns>Processed__c</columns>
        <columns>Has_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Has_Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Error List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>STG-Forex-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FF Staging - Forex</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>